# VirtualFileSystem

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  vfs_core.cpp  vfs_core.h  virtualfilesystem.cpp  virtualfilesystem.h
